@@ -1,3 +1,8 @@
+2009-08-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-ppc.c (ppc_elf_relax_section): Correct conditions under
+	which find_plt_ent is called.  Delete redundant code.
+
 2009-08-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR binutils/10363
